# ChangeLog for dev-db/mysql
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.69 2003/09/11 16:50:05 robbat2 Exp $

  11 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14-r2.ebuild:
  fix bug #28421

*mysql-4.0.13-r4 (10 Sep 2003)

  10 Sep 2003; <solar@gentoo.org> mysql-4.0.13-r4.ebuild,
  mysql-4.0.14-r2.ebuild, files/mysql-4.0.14-security-28394.patch:
  secuirty fixes for stable and non stable branches of mysql, see bug 28394 for
  more info

  27 Aug 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14-r1.ebuild:
  Fix bug  #27204, thanks to help from forums while I was away on holiday.

  17 Aug 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14-r1.ebuild,
  files/mysql-4.0.14-r1-tcpd-vars-fix.diff:
  fix source on patch mysql-4.0.14-r1.ebuild

  11 Aug 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14-r1.ebuild,
  files/mysql-4.0.14-r2-tcpd-vars-fix.diff:
  fix bug #22571

*mysql-4.0.14-r1 (11 Aug 2003)

  11 Aug 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14-r1.ebuild,
  files/my.cnf-4.0.14-r1:
  fix bugs #26131 and #24826

  31 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14.ebuild:
  Remove extraneous warning about a bug that was fixed between .13 and .14

  28 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14.ebuild,
  files/mysql-4.0.14-mysqld-safe-sh.diff:
  Finish Fixing 4.0.14 and release

*mysql-4.0.14 (23 Jul 2003)

  04 Aug 2003; Guy Martin <gmsoft@gentoo.org> mysql-4.0.14.ebuild :
  Added ~hppa to KEYWORDS.

  23 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14.ebuild:
  Version bump

  16 Jul 2003; Christian Birchinger <joker@gentoo.org> mysql-4.0.13-r3.ebuild:
  Added sparc stable keyword

  12 Jul 2003; Donny Davies <woodchip@gentoo.org> mysql-4.0.13-r3.ebuild:
  Marked x86 stable.

  12 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.13-r3.ebuild: