@@ -1,12 +1,13 @@
-MD5 f090be0da73474d8d0deb16b1e549fac ChangeLog 11202
+MD5 6774a56f698c15e711e18f00e8eba1e5 ChangeLog 11324
 MD5 2d9fd1c37cc537963c5b77f2088a335c mysql-3.23.52-r1.ebuild 5873
-MD5 22cba07f398f679736975fb489b3222d mysql-3.23.57-r1.ebuild 6605
+MD5 09995b6e0a6f2f3007789f81c4436955 mysql-3.23.57-r1.ebuild 6606
 MD5 c59ceb38e06de5f8125f689edc52b191 mysql-4.0.13-r4.ebuild 7283
 MD5 a29166a4378eca3f2a954c4b6648e1ce mysql-4.0.14-r2.ebuild 7191
 MD5 c63efd889b589a982ec42c3381e93d1a mysql-3.23.56.ebuild 6548
 MD5 43070c2dd889f22108e60c753d857ea7 mysql-4.0.12.ebuild 6774
 MD5 6c282fa35bb93dabe168fc49e5f109cd mysql-4.0.14.ebuild 6920
 MD5 ca51174c7baee5c8fad1a8a40b99d03a mysql-4.0.14-r1.ebuild 7036
+MD5 f0015144c259bd17ac209d3ea53bdf52 mysql-3.23.57.ebuild 6551
 MD5 015a823e06d7181373b0601e4a17c284 files/digest-mysql-3.23.52-r1 67
 MD5 0d15b78f60dc9d26e02923e591d39ea7 files/digest-mysql-4.0.13-r4 66
 MD5 33666c6c9542fe3ef02379877f0c6bac files/digest-mysql-4.0.14-r2 66
