@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.69 2003/09/11 16:50:05 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.70 2003/09/15 09:03:12 aliz Exp $
+
+*mysql-3.23.57-r1 (15 Sep 2003)
+
+  15 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> mysql-3.23.57-r1.ebuild:
+  Security update
 
   11 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> mysql-4.0.14-r2.ebuild:
   fix bug #28421
